--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "scss-comment-helper",
   "displayName": "SCSS Comment Helper",
-  "description": "Automatically insert comments for nested SCSS classes, making it easier to navigate and understand the code structure.",
+  "description": "Automatically insert comments for nested SCSS selectors, making it easier to navigate and understand the code structure.",
   "icon": "./assets/logo-128x128.png",
   "keywords": [
     "scss",
     "comment",
     "helper"
   ],
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.77.0"
   },
