--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "scss-comment-helper",
   "displayName": "SCSS Comment Helper",
   "description": "Automatically insert comments for nested SCSS selectors, making it easier to navigate and understand the code structure.",
-  "icon": "./assets/logo-128x128.png",
+  "publisher": "le-kappy",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LeKappy/scss-comment-helper"
+  },
+  "icon": "assets/logo-128x128.png",
   "keywords": [
     "scss",
     "comment",
     "helper"
   ],
-  "version": "0.0.2",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -40,14 +45,17 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.77.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.77.0",
+    "@vscode/test-electron": "^2.3.0",
     "eslint": "^8.36.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^4.9.5",
-    "@vscode/test-electron": "^2.3.0"
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "vsce": "^2.15.0"
   }
 }
